Updated to baseline

--- a/index.html
+++ b/index.html
@@ -1,15 +1,76 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta author="Bryan Hyland" />
-    <meta keywords="Silver Ridge, Silver Ridge Elementary, Silver Ridge Eagles" />
-    <title>
-      Silver Ridge PTA
-    </title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Silver Ridge Elementary School of the Arts PTA" />
+    <meta name="keywords" content="PTA, Parent Teacher Association, Silver Ridge Scool of the Arts, Silver Ridge Elementary" />
+    <meta name="author" content="Bryan Hyland" />
+
+    <title>About Us</title>
+
+    <link rel="stylesheet" type="text/css" href="./css/newlayout.css" />
+    <link rel="stylesheet" type="text/css" href="./css/newstandardstyle.css" />
+    <link rel="stylesheet" type="text/css" href="./css/about.css" />
   </head>
-  
+
   <body>
-    <h1>New Silver Ridge PTA Website Coming Soon...</h1>
-    <p><h2>Under Construction</h2></p>
+    <a href="./index.html" target="_self"><img class="header-img" src="./images/SilverRidge_Logo_BlackWhite.png" alt="silver-ridge-logo" /></a>
+    <header>
+      <h1 class="headertext"><p class="header-name">Silver Ridge Elementary School of the Arts</p><p class="header-tag">Parent Teacher Association</p></h1>
+      <!-- top navigation bar -->
+      <nav class="headNav">
+        <a class="navlink index active-navlink" href="./index.html" target="_self"><p>About Us</p></a>
+        <a class="navlink cpp" href="./pages/volunteer.html" target="_self"><p>Volunteer</p></a>
+        <a class="navlink android" href="./pages/news.html" target="_self"><p>News</p></a>
+        <a class="navlink contact" href="./pages/contact.html" target="_self"><p>Contact</p></a>
+      </nav>
+    </header>    
+    
+    <div class="content">
+    <!-- Introduction section -->
+      <section class="intro page-text">
+        <h3 class="intro-head page-text-head">Our Mission</h3>
+        <section class="intro-body page-text-body">
+          <ul>
+            <li>To be a powerful voice for all of the children who attend Silver Ridge.</li>
+            <li>To be a relevant and powerful resource for our families and community.</li>
+            <li>To advocate for the education and the well-being of every Silver Ridge child.</li>
+          </ul>
+        </section>
+        <h3 class="intro-head page-text-head">The Vision</h3>
+        <section class="intro-body page-text-body">
+          To ensure that every child has the chance to reach their full potential.
+        </section></br>
+        <h3 class="intro-head page-text-head">Our Purpose</h3>
+          <section class="intro-body page-text-body">
+            <ul>
+              <li>To promote the welfare of our children/youth at home, school, and within our community.</li>
+              <li>To encourage a healthy work-life balance between school and home.</li>
+              <li>To work for the implementation of laws that promote the healthy growth, mentally and physically, of our children.</li>
+              <li>To promote cooperation between parents and children; ensuring a well rounded education for our children.</li>
+              <li>To unite educators, parents, and the general public to give a sense of community to the children so that they may grow up to be well rounded members of society.</li>
+            </ul>
+          </section></br>
+        <h3 class="intro-head page-text-head">PTA Values</h3>
+        <section class="intro-body page-text-body">
+          The following are the core values that guide our decisions and actions:
+        </section></br>
+        <section class="intro-body page-text-body">
+          <ul>
+            <li><strong style="font-size: 1em;">COLLABORATION</strong>: We work in partnership with a wide array of individuals and organizations to accomplish our agreed-upon goals.</li>
+            <li><strong style="font-size: 1em;">COMMITMENT</strong>: We are dedicated to promoting childrens' health, well-being, and educational success through strong parent, family, and community involvement.</li>
+            <li><strong style="font-size: 1em;">ACCOUNTABILITY</strong>: We acknowledge our obligations. We deliver on our promises.</li>
+            <li><strong style="font-size: 1em;">RESPECT</strong>: We value our colleagues and ourselves. We expect the same high quality of effort and thought from ourselves as we do from others.</li>
+            <li><strong style="font-size: 1em;">INCLUSIVE</strong>: We invite the stranger and welcome the newcomer. We value and seek input from as wide a spectrum of viewpoints and experiences as possible.</li>
+            <li><strong style="font-size: 1em;">INTEGRITY</strong>: We act consistently with our beliefs. When we err, we acknowledge the mistake and seek to make amends.</li>
+          </ul>
+        </section></br>
+      </section>
+    </div>
+    <footer id="footer">
+      
+    </footer>
+    <script type="text/javascript" src="./js/iedetect.js"></script>
   </body>
 </html>
